add /transactions [get]
