# docs/swagger.json
@@ -8,7 +8,7 @@
         },
         "version": "1.0"
     },
-    "host": "bankapi.iorkss.ru",
+    "host": "127.0.0.1:8080",
     "basePath": "/api/v1",
     "paths": {
         "/account": {
@@ -426,6 +426,77 @@
                 }
             }
         },
+        "/transactions": {
+            "get": {
+                "security": [
+                    {
+                        "UserBearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all user's transactions",
+                "parameters": [
+                    {
+                        "minimum": 0,
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "minimum": 0,
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.TransactionExtended"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/apihandler.response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/apihandler.response"
+                        }
+                    },
+                    "403": {
+                        "description": "User deleted or banned",
+                        "schema": {
+                            "$ref": "#/definitions/apihandler.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/apihandler.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/apihandler.response"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "security": [
@@ -590,6 +661,9 @@
                 },
                 "sent": {
                     "type": "number"
+                },
+                "timestamp": {
+                    "type": "string"
                 }
             }
         },
@@ -680,6 +754,48 @@
                     "type": "boolean"
                 },
                 "number": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.TransactionExtended": {
+            "type": "object",
+            "properties": {
+                "conversionRate": {
+                    "type": "number"
+                },
+                "isConversion": {
+                    "type": "boolean"
+                },
+                "isIncoming": {
+                    "type": "boolean"
+                },
+                "publicId": {
+                    "type": "string"
+                },
+                "received": {
+                    "type": "number"
+                },
+                "receivedCurrency": {
+                    "type": "string"
+                },
+                "receiverAccountNumber": {
+                    "type": "string"
+                },
+                "sameOwner": {
+                    "type": "boolean"
+                },
+                "senderAccountNumber": {
+                    "description": "try 'omitEmpty'",
+                    "type": "string"
+                },
+                "sent": {
+                    "type": "number"
+                },
+                "sentCurrency": {
+                    "type": "string"
+                },
+                "timestamp": {
                     "type": "string"
                 }
             }
